syntax = "proto3";

package pbconfig;

// 微信小程序信息
message WXAppInfo {
	string appname = 1; // 小程序名字
	string appid = 2; // 小程序appId
	string secret = 3; // 小程序appSecret
}
